# direct-syscall

./: CMakeLists.txt  README.md
include/: pe_structures.h
src/: main.cpp  pe_parser.cpp  pe_parser.h  syscall_extractor.cpp  syscall_extractor.h  syscall_invoker.cpp  syscall_invoker.h  syscall_stub.asm
